app/assets/builds/showcase.css
/* ... */
.sc-space-y-4 > :not([hidden]) ~ :not([hidden]) {
  --tw-space-y-reverse: 0;
  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
}

.sc-space-y-8 > :not([hidden]) ~ :not([hidden]) {
  --tw-space-y-reverse: 0;
  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
  margin-bottom: calc(2rem * var(--tw-space-y-reverse));
}

.sc-overflow-scroll {
  overflow: scroll;
}

.sc-overflow-x-auto {
  overflow-x: auto;
}

.sc-overflow-y-auto {
  overflow-y: auto;
}

.sc-truncate {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.sc-rounded-full {
  border-radius: 9999px;
}

.sc-rounded-md {
  border-radius: 0.375rem;
}

.sc-rounded-t-md {
  border-top-left-radius: 0.375rem;
  border-top-right-radius: 0.375rem;
}

.sc-border {
  border-width: 1px;
}

.sc-border-0 {
  border-width: 0px;
}

.sc-border-2 {
  border-width: 2px;
}

.sc-border-b {
  border-bottom-width: 1px;
}

.sc-border-r {
  border-right-width: 1px;
}

.sc-border-t {
  border-top-width: 1px;
}

.sc-border-gray-200 {
  --tw-border-opacity: 1;
  border-color: rgb(229 231 235 / var(--tw-border-opacity));
}

.sc-border-indigo-300 {
  --tw-border-opacity: 1;
  border-color: rgb(165 180 252 / var(--tw-border-opacity));
}

.sc-bg-indigo-50 {
  --tw-bg-opacity: 1;
  background-color: rgb(238 242 255 / var(--tw-bg-opacity));
}

.sc-bg-slate-100\/50 {
  background-color: rgb(241 245 249 / 0.5);
}

.sc-bg-slate-50 {
  --tw-bg-opacity: 1;
  background-color: rgb(248 250 252 / var(--tw-bg-opacity));
}

.sc-p-12 {
  padding: 3rem;
}

.sc-p-4 {
  padding: 1rem;
}

.sc-px-2 {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.sc-px-4 {
  padding-left: 1rem;
  padding-right: 1rem;
}

.sc-px-8 {
  padding-left: 2rem;
  padding-right: 2rem;
}

.sc-py-2 {
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

.sc-py-5 {
  padding-top: 1.25rem;
  padding-bottom: 1.25rem;
}

.sc-pl-4 {
  padding-left: 1rem;
}

.sc-pt-7 {
  padding-top: 1.75rem;
}

.sc-text-2xl {
  font-size: 1.5rem;
  line-height: 2rem;
}

.sc-text-3xl {
  font-size: 1.875rem;
  line-height: 2.25rem;
}

.sc-text-base {
  font-size: 1rem;
  line-height: 1.5rem;
}

.sc-text-xl {
  font-size: 1.25rem;
  line-height: 1.75rem;
}

.sc-text-xs {
  font-size: 0.75rem;
  line-height: 1rem;
}

.sc-font-black {
  font-weight: 900;
}

.sc-font-medium {
  font-weight: 500;
}

.sc-font-normal {
  font-weight: 400;
}

.sc-font-semibold {
  font-weight: 600;
}

.sc-italic {
  font-style: italic;
}

.sc-leading-snug {
  line-height: 1.375;
}

.sc-text-slate-500 {
  --tw-text-opacity: 1;
  color: rgb(100 116 139 / var(--tw-text-opacity));
}

.hover\:sc-select-all:hover {
  -webkit-user-select: all;
     -moz-user-select: all;
          user-select: all;
}

.hover\:sc-bg-indigo-50:hover {
  --tw-bg-opacity: 1;
  background-color: rgb(238 242 255 / var(--tw-bg-opacity));
}

.hover\:sc-text-inherit:hover {
  color: inherit;
}

.hover\:sc-no-underline:hover {
  text-decoration-line: none;
}

@media (prefers-color-scheme: dark) {
  .dark\:sc-bg-neutral-700\/50 {
    background-color: rgb(64 64 64 / 0.5);
  }

  .dark\:sc-bg-neutral-800 {
    --tw-bg-opacity: 1;
    background-color: rgb(38 38 38 / var(--tw-bg-opacity));
  }

  .dark\:sc-bg-neutral-900 {
    --tw-bg-opacity: 1;
    background-color: rgb(23 23 23 / var(--tw-bg-opacity));
  }

  .dark\:sc-text-inherit {
    color: inherit;
  }

  .dark\:sc-text-white {
    --tw-text-opacity: 1;
    color: rgb(255 255 255 / var(--tw-text-opacity));
  }

  .dark\:hover\:sc-bg-neutral-700\/50:hover {
    background-color: rgb(64 64 64 / 0.5);
  }
}

@media (min-width: 768px) {
  .md\:sc-text-lg {
    font-size: 1.125rem;
    line-height: 1.75rem;
  }
}

@media (min-width: 1280px) {
  .xl\:sc-col-span-10 {
    grid-column: span 10 / span 10;
  }

  .xl\:sc-col-span-2 {
    grid-column: span 2 / span 2;
  }
}

